style: get back colors on new forms.

--- a/ui/crm/style.css
+++ b/ui/crm/style.css
@@ -1,3 +1,27 @@
+
+/**************************************************************************
+ * blue light: #EEEEFF
+ * blue extra light: #F0F0FF
+ * purple: #ADA0D9
+ * purple light: #CFCAEA
+ * pinky purple: #DFBADD
+ * pinky purple light: #e9e0ff
+ **************************************************************************/
+
+/**************************************************************************
+ * Mission *
+ **************************************************************************/
+#page-mission-view FORM {
+  background-color: #EEEEFF;
+}
+
+/**************************************************************************
+ * Company *
+ **************************************************************************/
+#page-company-view FORM {
+  background-color: #DFBADD;
+}
+
 /**************************************************************************
  * Prospect form *
  **************************************************************************/
