views: remove old code ; fix some links.

--- a/ui/crm/style.css
+++ b/ui/crm/style.css
@@ -37,6 +37,10 @@
   background-color: #DFBADD;
 }
 
+#page-company-view #content {
+  width: 500px;
+}
+
 /**************************************************************************
  * Prospect *
  **************************************************************************/
