mission: take control of Mission edit_form template.

--- a/ui/crm/style.css
+++ b/ui/crm/style.css
@@ -26,6 +26,14 @@
 #page-missions-new-mission FORM fieldset {
   background-color: #EEEEFF;
 }
+#page-mission-view FORM fieldset fieldset {
+  background-color: #CFCAEA;
+}
+
+#page-mission-view FORM fieldset {
+  padding: 2px;
+  margin: 1px;
+}
 
 /**************************************************************************
  * Company *
