views: simplify mission view using float instead of table. (prospect view regression)

--- a/ui/crm/style.css
+++ b/ui/crm/style.css
@@ -35,6 +35,18 @@
   margin: 1px;
 }
 
+/* Mission view subviews */
+#mission-view-prospect {
+  float: left;
+}
+#mission-view-edit {
+  float: left;
+}
+#mission-view-comments {
+  float: right;
+  width: 380px;
+}
+
 /**************************************************************************
  * Company *
  **************************************************************************/
