import contacts from gmail contacts
Being unable to search case independant makes it unsafe to import twice

--- a/ui/icons/16x16/sprites.css
+++ b/ui/icons/16x16/sprites.css
@@ -19,3 +19,4 @@
 .mission_add { background-position: -2px -326px; }
 .contact_add { background-position: -2px -344px; }
 .company_add { background-position: -2px -362px; }
+.book_addresses { background-position: -2px -380px; }
