--- a/ui/style.css
+++ b/ui/style.css
@@ -297,6 +297,7 @@ fieldset#company legend a {
 .crmsprites16.mission-add { background-position: -2px -326px; }
 .crmsprites16.contact-add { background-position: -2px -344px; }
 .crmsprites16.company-add { background-position: -2px -362px; }
+.crmsprites16.book-addresses { background-position: -2px -380px; }
 
 .button-calendar.button-selector {
   background-image: none;
